--- a/.github/workflows/main_msdocs-core-sql-kenan.yml
+++ b/.github/workflows/main_msdocs-core-sql-kenan.yml
@@ -28,10 +28,10 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      -name: dotnet tool install ef
-        run: dotnet tool install -g dotnet-ef --versionn 7.0.0
+      - name: dotnet tool install ef
+        run: dotnet tool install -g dotnet-ef --version 7.0.0
 
-      -name: dotnet ef migration bundle
+      - name: dotnet ef migrations bundle
         run: dotnet ef migrations bundle --runtime linux-x64 -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
       - name: Upload artifact for deployment job
