--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Data Source=msdocs-core-sql-kenan-server.database.windows.net,1433;Initial Catalog=msdocs-core-sql-kenan-database;User ID=msdocs-core-sql-kenan-server-admin;Password=3F74MLMO10UKZ78N$"
+    "AZURE_SQL_CONNECTIONSTRING": "abc"
   }
 }
