--- a/.github/workflows/main_msdocs-core-sql-kenan.yml
+++ b/.github/workflows/main_msdocs-core-sql-kenan.yml
@@ -58,6 +58,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'msdocs-core-sql-kenan'
-          slot-name: 'Production'
+          slot-name: 'staging'
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2DB3AE656EC1475980C9F989FC6F173C }}
